pass logged in user uid when creating a note on a registration

--- a/src/app/features/admin/registration-requests/registration-request/registration-request.component.html
+++ b/src/app/features/admin/registration-requests/registration-request/registration-request.component.html
@@ -140,6 +140,7 @@
       [getNotes]="getNotes"
       [notesError]="notesError"
       [notesForm]="notesForm"
+      [loggedInUser]="loggedInUser"
     ></app-add-note>
   </div>
   <div class="govuk-grid-column-three-quarters">
