--- a/src/app/features/admin/registration-requests/rejected-registration-request/rejected-registration-request.component.html
+++ b/src/app/features/admin/registration-requests/rejected-registration-request/rejected-registration-request.component.html
@@ -65,6 +65,7 @@
       [getNotes]="getNotes"
       [notesError]="notesError"
       [notesForm]="notesForm"
+      [loggedInUser]="loggedInUser"
     ></app-add-note>
   </div>
 </div>
