--- a/src/app/features/admin/search/search-for-user/search-for-user.component.html
+++ b/src/app/features/admin/search/search-for-user/search-for-user.component.html
@@ -13,7 +13,7 @@
       </div>
       <div *ngIf="results && results.length">
         <p class="govuk-!-font-weight-bold">
-          Your search returned {{ results.length | number }} {{ results.length > 1 ? 'results' : 'result' }}.
+          Your search returned {{ results.length | number }} {{ results.length > 1 ? 'results' : 'result' }}
         </p>
         <table class="govuk-table" *ngIf="results && results.length" data-testid="user-search-results">
           <thead class="govuk-table__head">
@@ -118,12 +118,18 @@
         <fieldset class="govuk-fieldset">
           <div class="govuk-form-group">
             <label class="govuk-label" for="name"> Name </label>
-            <input class="govuk-input" id="name" name="name" type="text" [formControlName]="'name'" />
+            <input
+              class="govuk-input govuk-!-width-three-quarters"
+              id="name"
+              name="name"
+              type="text"
+              [formControlName]="'name'"
+            />
           </div>
           <div class="govuk-form-group">
             <label class="govuk-label" for="username"> Username </label>
             <input
-              class="govuk-input govuk-input--width-20"
+              class="govuk-input govuk-!-width-three-quarters"
               id="username"
               name="username"
               type="text"
@@ -133,7 +139,7 @@
           <div class="govuk-form-group">
             <label class="govuk-label" for="emailAddress"> Email address </label>
             <input
-              class="govuk-input govuk-input--width-20"
+              class="govuk-input govuk-!-width-three-quarters"
               id="emailAddress"
               name="emailAddress"
               type="text"
