--- a/src/assets/scss/modules/_utils.scss
+++ b/src/assets/scss/modules/_utils.scss
@@ -6,6 +6,14 @@
   text-align: right;
 }
 
+.govuk-util__float-left {
+  float: left;
+}
+
+.govuk-util__align-left {
+  text-align: left;
+}
+
 .govuk-util__align-center {
   text-align: center;
 }
