--- a/src/app/features/admin/search/search-for-group/search-for-group.component.html
+++ b/src/app/features/admin/search/search-for-group/search-for-group.component.html
@@ -1,5 +1,39 @@
 <div class="govuk-grid-column-full">
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">Search for a group</div>
+    <div class="govuk-grid-column-two-thirds">
+      <p>Search by employer type. You can also choose to only search for parents.</p>
+    </div>
+    <div class="govuk-grid-column-one-third">
+      <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="employerType"> Employer Type </label>
+          <select class="govuk-select" id="employerType" name="employerType" [formControlName]="'employerType'">
+            <option value="All">All</option>
+            <option value="Local Authority (adult services)">Local Authority (adult services)</option>
+            <option value="Local Authority (generic/other)">Local Authority (generic/other)</option>
+            <option value="Private Sector">Private Sector</option>
+            <option value="Voluntary / Charity">Voluntary / Charity</option>
+            <option value="Other">Other</option>
+          </select>
+        </div>
+
+        <div class="govuk-form-group">
+          <div class="govuk-checkboxes">
+            <div class="govuk-checkboxes__item">
+              <input
+                id="onlyParents"
+                name="onlyParents"
+                class="govuk-checkboxes__input"
+                type="checkbox"
+                value="true"
+                [formControlName]="'onlyParents'"
+              />
+              <label class="govuk-label govuk-checkboxes__label" for="onlyParents"> Only search for parents </label>
+            </div>
+          </div>
+        </div>
+        <button type="submit" class="govuk-button" data-testid="searchButton">Search</button>
+      </form>
+    </div>
   </div>
 </div>
