--- a/src/app/features/admin/search/search-for-group/search-for-group.component.html
+++ b/src/app/features/admin/search/search-for-group/search-for-group.component.html
@@ -2,6 +2,15 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <p>Search by employer type. You can also choose to only search for parents.</p>
+      <div *ngIf="submitted && !results.length" data-testid="no-search-results">
+        <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Information</span>
+            Your search returned no results. Please refine your search criteria.
+          </strong>
+        </div>
+      </div>
     </div>
     <div class="govuk-grid-column-one-third">
       <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
