Update styling on first login wizard

--- a/src/app/features/first-login-wizard/first-login-wizard.component.html
+++ b/src/app/features/first-login-wizard/first-login-wizard.component.html
@@ -1,31 +1,33 @@
 <div class="govuk-grid-row govuk-!-margin-1 govuk-!-margin-top-4">
   <div class="asc-summary-box">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full govuk-util__align-right">
+    <div class="govuk-grid-row govuk-!-margin-top-3">
+      <div class="govuk-grid-column-one-half govuk-util__align-left">
+        <h1 class="govuk-heading-l">Help to get you started</h1>
+      </div>
+      <div class="govuk-grid-column-one-half govuk-util__align-right">
         <a class="govuk-button govuk-button--link" routerLink="/dashboard">Close</a>
       </div>
     </div>
-    <div class="govuk-grid-row">
+    <div class="govuk-grid-row govuk-!-margin-bottom-5">
       <div class="govuk-grid-column-one-half">
-        <h1 class="govuk-!-font-weight-regular govuk-!-margin-top-0">Help to get you started</h1>
         <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
           {{ wizards[currentIndex].title }}
         </h2>
         <div class="asc-cms-content" [innerHTML]="wizards[currentIndex].content"></div>
       </div>
-      <div class="govuk-grid-column-one-half">
+      <div class="govuk-grid-column-one-half govuk-util__align-center">
         <img
-          class="asc-shadow-box"
+          class="asc-shadow-box govuk-!-margin-top-3"
           src="{{ imageUrl }}{{ wizards[currentIndex].image }}"
           alt="{{ wizards[currentIndex].title }}"
         />
       </div>
     </div>
-    <div class="govuk-grid-row">
+    <div class="govuk-grid-row govuk-!-margin-bottom-4">
       <div *ngIf="!isFirst" class="govuk-grid-column-one-half govuk-util__float-left">
         <a class="govuk-util__float-left" href="#" (click)="nextOrPreviousWizard($event, false)">
-          <div class="asc-chevron-before asc-no-underline govuk-!-font-size-27">Previous</div>
-          <div class="govuk-link govuk-!-padding-left-2">{{ wizards[currentIndex - 1].title }}</div>
+          <div class="asc-chevron-before asc-no-underline govuk-!-font-size-26">Previous</div>
+          <div class="govuk-link govuk-!-padding-left-3">{{ wizards[currentIndex - 1].title }}</div>
         </a>
       </div>
       <div *ngIf="!isLast" class="govuk-grid-column-one-half govuk-util__float-right">
@@ -34,8 +36,8 @@
           href="#"
           (click)="nextOrPreviousWizard($event, true)"
         >
-          <div class="asc-chevron-after asc-no-underline govuk-!-font-size-27">Next</div>
-          <div class="govuk-link govuk-!-padding-right-2">
+          <div class="asc-chevron-after asc-no-underline govuk-!-font-size-26">Next</div>
+          <div class="govuk-link govuk-!-padding-right-3">
             {{ wizards[currentIndex + 1].title }}
           </div>
         </a>
