Added a max width to the image to stop the image overflowing out of the wizard box

--- a/src/app/features/first-login-wizard/first-login-wizard.component.html
+++ b/src/app/features/first-login-wizard/first-login-wizard.component.html
@@ -17,7 +17,7 @@
       </div>
       <div class="govuk-grid-column-one-half govuk-util__align-center">
         <img
-          class="asc-shadow-box govuk-!-margin-top-3"
+          class="asc-shadow-box govuk-!-margin-top-3 asc-image-width"
           src="{{ imageUrl }}{{ wizards[currentIndex].image }}"
           alt="{{ wizards[currentIndex].title }}"
         />
