feat(adminSearchGroups): Rename establishment to workplace-dropdown

--- a/src/app/features/admin/search/search-for-group/search-for-group.component.html
+++ b/src/app/features/admin/search/search-for-group/search-for-group.component.html
@@ -46,11 +46,11 @@
                 data-testid="groups-workplace-details"
               >
                 <td colspan="4">
-                  <app-establishment-dropdown
+                  <app-workplace-dropdown
                     [item]="item"
                     [workplaceIndex]="workplaceIndex"
                     (navigateToWorkplaceClicked)="navigateToWorkplace($event)"
-                  ></app-establishment-dropdown>
+                  ></app-workplace-dropdown>
                 </td>
               </tr>
             </ng-container>
