--- a/src/app/features/admin/search/search-for-group/search-for-group.component.html
+++ b/src/app/features/admin/search/search-for-group/search-for-group.component.html
@@ -15,7 +15,7 @@
         <p class="govuk-!-font-weight-bold">
           Your search returned {{ results.length | number }} {{ results.length > 1 ? 'results' : 'result' }}
         </p>
-        <table class="govuk-table" *ngIf="results && results.length" data-testid="group-search-results">
+        <table class="govuk-table" data-testid="group-search-results">
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
               <th class="govuk-table__header govuk-!-width-one-third" scope="col">Workplace</th>
