Add route for CQC main service change and add test

--- a/src/app/features/admin/admin-menu/admin-menu.component.html
+++ b/src/app/features/admin/admin-menu/admin-menu.component.html
@@ -9,7 +9,7 @@
     <a routerLink="/sfcadmin/parent-requests" class="govuk-link">Parent requests</a>
   </li>
   <li routerLinkActive="active">
-    <a routerLink="/sfcadmin/cqc-status-changes" class="govuk-link">CQC status changes</a>
+    <a routerLink="/sfcadmin/cqc-main-service-change" class="govuk-link">CQC main service change</a>
   </li>
   <li routerLinkActive="active">
     <a routerLink="/sfcadmin/emails" class="govuk-link">Emails</a>
