Add header for cqc main service change table and add test for them

--- a/src/app/features/admin/cqc-main-service-change-list/cqc-main-service-change-list.component.html
+++ b/src/app/features/admin/cqc-main-service-change-list/cqc-main-service-change-list.component.html
@@ -1,6 +1,16 @@
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-5">
     <h2 class="govuk-heading-m">CQC main service change</h2>
   </div>
-  <router-outlet></router-outlet>
+  <div class="govuk-grid-column-two-thirds">
+    <table class="govuk-table">
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header">Workplace</th>
+          <th scope="col" class="govuk-table__header">Received</th>
+          <th scope="col" class="govuk-table__header">Status</th>
+        </tr>
+      </thead>
+    </table>
+  </div>
 </div>
